kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /init/index.html"]
        volumeMounts:
        - name: app
          mountPath: /homework
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        readinessProbe:
          initialDelaySeconds: 5
          exec:
            command:
            - cat
            - /homework/index.html
      volumes:
      - name: app
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
