kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: homework
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: nginx
